--- a/app/globals.css
+++ b/app/globals.css
@@ -56,7 +56,13 @@
   .sub-heading {
     @apply font-medium text-[20px] text-white max-w-2xl text-center break-words;
   }
-  
+  .search-form {
+    @apply max-w-3xl w-full min-h-[80px] bg-white border-[5px] border-black rounded-[80px] text-[24px] mt-8 px-5 flex flex-row items-center gap-5;
+  }
+  .search-btn {
+    @apply size-[50px] rounded-full bg-black flex justify-center items-center ;
+  }
+
   
 }
 
