--- a/app/globals.css
+++ b/app/globals.css
@@ -60,7 +60,7 @@
     @apply max-w-3xl w-full min-h-[80px] bg-white border-[5px] border-black rounded-[80px] text-[24px] mt-8 px-5 flex flex-row items-center gap-5;
   }
   .search-btn {
-    @apply size-[50px] rounded-full bg-black flex justify-center items-center ;
+    @apply size-[50px] rounded-full bg-black flex justify-center items-center 
   }
 
   
