cards are added

--- a/app/globals.css
+++ b/app/globals.css
@@ -62,6 +62,12 @@
   .search-btn {
     @apply size-[50px] rounded-full bg-black flex justify-center items-center 
   }
+  .card_grid {
+    @apply grid md:grid-cols-3 sm:grid-cols-2 gap-5;
+  }
+  .startup-card {
+    @apply bg-white border-[5px] border-black py-6 px-5 rounded-[22px] shadow-200 hover:border-primary transition-all duration-500 hover:shadow-300 hover:bg-primary-100;
+  }
 
   
 }
