--- a/app/globals.css
+++ b/app/globals.css
@@ -67,8 +67,9 @@
 }
 
 .startup-card {
-  @apply bg-white border-[5px] rounded-[22px] border-black py-6 px-5 rounded-[22px] shadow-md transition-all duration-500 overflow-hidden;
+  @apply bg-white border-[5px] border-black py-6 px-5 rounded-[22px] shadow-md transition-all duration-500 overflow-hidden hover:bg-blue-200 hover:border-blue-500;
 }
+
 
 
 
