--- a/app/globals.css
+++ b/app/globals.css
@@ -77,7 +77,7 @@
     @apply px-6 py-10 max-w-7xl mx-auto  ;
   }
 .category-tag {
-  @apply absolute top-280 right-4 bg-blue-200 border-2 border-black font-bold uppercase rounded-full px-4 py-2 hover:bg-blue-400;
+  @apply  bg-blue-200 border-2 border-black font-bold uppercase rounded-full px-4 py-2 hover:bg-blue-400;
 }
 
   
