--- a/app/globals.css
+++ b/app/globals.css
@@ -149,6 +149,13 @@
   @apply font-medium text-[16px] px-4 py-2 rounded-lg capitalize;
   background-color: hsl(213, 100%, 87%); 
 }
+.startup-form_btn {
+  @apply bg-blue-200 mx-auto inline-flex  hover:bg-blue-400 border-[4px] border-black rounded-full p-5 min-h-[70px] w-full font-bold text-[18px] flex items-center justify-center;
+}
+
+
+
+
 
 
 
